# Aruco-Robot-Formation

./: .gitignore  mysql-read.py  readme.md  requirements.txt
src/aruco_multi_detect/: CMakeLists.txt  package.xml
src/aruco_multi_detect/launch/: aruco_detect.launch
src/aruco_multi_detect/msg/: ArUcoMarker.msg  ArUcoMarkers.msg  NashEquilibrium.msg  TwistStamped.msg  VirtualLeader.msg
src/aruco_multi_detect/src/: aruco_multi_detector.cpp  db_test_and_plot.cpp  mysql_read.cpp  mysql_test.cpp  mysql_write.cpp  pid_controller.cpp  plot_from_db.cpp  robots_control.cpp
